# owlclaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.test.yml  m5_max_llm_infrastructure_guide.md  owlclaw.code-workspace  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.kiro/: AGENT_WORK_CLAIMS.md  DELIVERY_codex-work_2026-03-07-REJECT-flow.md  DELIVERY_codex-work_2026-03-07-round10.md  DELIVERY_codex-work_2026-03-07-round11.md  DELIVERY_codex-work_2026-03-07-round12.md  DELIVERY_codex-work_2026-03-07-round13.md  DELIVERY_codex-work_2026-03-07-round14.md  DELIVERY_codex-work_2026-03-07-round15.md  DELIVERY_codex-work_2026-03-07-round16.md  DELIVERY_codex-work_2026-03-07-round17.md  DELIVERY_codex-work_2026-03-07-round18.md  DELIVERY_codex-work_2026-03-07-round19.md  DELIVERY_codex-work_2026-03-07-round2.md  DELIVERY_codex-work_2026-03-07-round20.md  DELIVERY_codex-work_2026-03-07-round21.md  DELIVERY_codex-work_2026-03-07-round22.md  DELIVERY_codex-work_2026-03-07-round23.md  DELIVERY_codex-work_2026-03-07-round24.md  DELIVERY_codex-work_2026-03-07-round25.md  DELIVERY_codex-work_2026-03-07-round26.md  DELIVERY_codex-work_2026-03-07-round27.md  DELIVERY_codex-work_2026-03-07-round28.md  DELIVERY_codex-work_2026-03-07-round29.md  DELIVERY_codex-work_2026-03-07-round3.md  DELIVERY_codex-work_2026-03-07-round30.md  DELIVERY_codex-work_2026-03-07-round31.md  DELIVERY_codex-work_2026-03-07-round32.md  DELIVERY_codex-work_2026-03-07-round33.md  DELIVERY_codex-work_2026-03-07-round34.md  DELIVERY_codex-work_2026-03-07-round35.md  DELIVERY_codex-work_2026-03-07-round36.md  DELIVERY_codex-work_2026-03-07-round37.md  DELIVERY_codex-work_2026-03-07-round38.md  DELIVERY_codex-work_2026-03-07-round39.md  DELIVERY_codex-work_2026-03-07-round4.md  DELIVERY_codex-work_2026-03-07-round40.md  DELIVERY_codex-work_2026-03-07-round41.md  DELIVERY_codex-work_2026-03-07-round42.md  DELIVERY_codex-work_2026-03-07-round43.md  DELIVERY_codex-work_2026-03-07-round44.md  (+40 more)
.owlhub/: config.yaml
50-publish/: DEPLOY_CHECKLIST.md  (+1 more)
(+1253 files in other folders)
